@@ -237,11 +237,13 @@
 
 #define WINDOW_MUSIC_PLAYLIST         10500
 #define WINDOW_MUSIC_FILES            10501
-#define WINDOW_MUSIC_ALBUM            10502
-#define WINDOW_MUSIC_ARTIST           10503
-#define WINDOW_MUSIC_GENRE            10504
-#define WINDOW_MUSIC_TOP100           10505
-#define WINDOW_MUSIC_NAV              10506
+//#define WINDOW_MUSIC_ALBUM            10502
+//#define WINDOW_MUSIC_ARTIST           10503
+//#define WINDOW_MUSIC_GENRE            10504
+//#define WINDOW_MUSIC_TOP100           10505
+//#define WINDOW_MUSIC_NAV              10506
+#define WINDOW_MUSIC_NAV              10502
+#define WINDOW_MUSIC_TOP100           10503
 
 #define WINDOW_VIRTUAL_KEYBOARD       11000
 #define WINDOW_DIALOG_SELECT          12000
