@@ -93,6 +93,17 @@ public:
   bool Open() ;
   bool IsOpen();
   void Close() ;
+  void BeginTransaction();
+  bool CommitTransaction();
+  void RollbackTransaction();
+  bool InTransaction();
+  void EmptyCache();
+  bool Compress();
+  void Interupt();
+  void Clean();
+  int  Cleanup(CGUIDialogProgress *pDlgProgress);
+  void DeleteAlbumInfo();
+  void DeleteCDDBInfo();
   void AddSong(const CSong& song, bool bCheck = true);
   long AddAlbumInfo(const CAlbum& album, const VECSONGS& songs);
   long UpdateAlbumInfo(const CAlbum& album, const VECSONGS& songs);
@@ -101,43 +112,35 @@ public:
   bool GetSongByFileName(const CStdString& strFileName, CSong& song);
   bool GetSongsByPath(const CStdString& strPath, VECSONGS& songs);
   bool GetSongsByPath(const CStdString& strPath, MAPSONGS& songs, bool bAppendToMap = false);
-  bool GetSongsByArtist(const CStdString strArtist, VECSONGS& songs);
   bool GetSongsByAlbum(const CStdString& strAlbum, const CStdString& strPath, VECSONGS& songs);
-  bool GetSongsByGenre(const CStdString& strGenre, VECSONGS& songs);
-  bool GetArtists(VECARTISTS& vecArtists);
-  bool GetArtistsByName(const CStdString& strArtist, VECARTISTS& artists);
-  bool GetAlbums(VECALBUMS& albums);
-  bool GetGenres(VECGENRES& genres);
-  bool GetTop100(VECSONGS& songs);
-  bool IncrTop100CounterByFileName(const CStdString& strFileName1);
-  void BeginTransaction();
-  bool CommitTransaction();
-  void RollbackTransaction();
-  bool InTransaction();
-  void EmptyCache();
-  void CheckVariousArtistsAndCoverArt();
-  bool GetRecentlyPlayedAlbums(VECALBUMS& albums);
-  bool GetRecentlyAddedAlbums(VECALBUMS& albums);
-  bool GetSongsByPathes(SETPATHES& pathes, MAPSONGS& songs);
-  bool GetAlbumByPath(const CStdString& strPath, CAlbum& album);
-  bool GetAlbumsByPath(const CStdString& strPath, VECALBUMS& albums);
-  bool GetAlbumsByArtist(const CStdString& strArtist, VECALBUMS& albums);
-  bool FindAlbumsByName(const CStdString& strSearch, VECALBUMS& albums);
   bool FindSongsByName(const CStdString& strSearch, VECSONGS& songs);
   bool FindSongsByNameAndArtist(const CStdString& strSearch, VECSONGS& songs);
+  bool GetArtistsByName(const CStdString& strArtist, VECARTISTS& artists);
+  bool GetAlbumsByPath(const CStdString& strPath, VECALBUMS& albums);
+  bool FindAlbumsByName(const CStdString& strSearch, VECALBUMS& albums);
+  bool GetTop100(VECSONGS& songs);
+  bool IncrTop100CounterByFileName(const CStdString& strFileName1);
   bool GetSubpathsFromPath(const CStdString &strPath, CStdString& strPathIds);
   bool RemoveSongsFromPaths(const CStdString &strPathIds);
   bool CleanupAlbumsArtistsGenres(const CStdString &strPathIds);
-  bool Compress();
-  int Cleanup(CGUIDialogProgress *pDlgProgress);
-  void Clean();
-  void DeleteAlbumInfo();
-  void DeleteCDDBInfo();
-  void Interupt();
+  void CheckVariousArtistsAndCoverArt();
   bool GetGenresNav(VECGENRES& genres);
   bool GetArtistsNav(VECARTISTS& artists, const CStdString &strGenre1);
   bool GetAlbumsNav(VECALBUMS& albums, const CStdString &strGenre1, const CStdString &strArtist1);
   bool GetSongsNav(VECSONGS& songs, const CStdString &strGenre1, const CStdString &strArtist1, const CStdString &strAlbum1, const CStdString &strAlbumPath1);
+
+//  REMOVED WITH ALBUMS, ARTISTS, AND GENRE VIEWS
+//  bool GetSongsByArtist(const CStdString strArtist, VECSONGS& songs);
+//  bool GetSongsByGenre(const CStdString& strGenre, VECSONGS& songs);
+//  bool GetArtists(VECARTISTS& vecArtists);
+//  bool GetAlbums(VECALBUMS& albums);
+//  bool GetGenres(VECGENRES& genres);
+//  bool GetRecentlyPlayedAlbums(VECALBUMS& albums);
+//  bool GetRecentlyAddedAlbums(VECALBUMS& albums);
+//  bool GetAlbumsByArtist(const CStdString& strArtist, VECALBUMS& albums);
+//  UNUSED FUNCTIONS
+//  bool GetSongsByPathes(SETPATHES& pathes, MAPSONGS& songs);
+//  bool GetAlbumByPath(const CStdString& strPath, CAlbum& album);
 
 protected:
   auto_ptr<SqliteDatabase> m_pDB;
